--- a/script/config.json
+++ b/script/config.json
@@ -1,7 +1,11 @@
 {
   "version": "1.0",
-  "address": "0.0.0.0:8999",
-  "server_config": {
-    "address": "123"
+  "httpAddress": "0.0.0.0:8999",
+  "serverConfig": {
+    "queryAddress": "0.0.0.0:7890",
+    "recallAddress": "0.0.0.0:7891"
+  },
+  "timeCircle": {
+    "queryCut": 20
   }
 }
