feat(thrift): 增加thrift生成文件

--- a/script/config.json
+++ b/script/config.json
@@ -7,5 +7,10 @@
   },
   "timeCircle": {
     "queryCut": 20
+  },
+  "skipModule": {
+    "skipQueryAnalysis": true,
+    "skipRecall": false,
+    "skilRank": false
   }
 }
